# SpectResC

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  build.yml  meta.yaml  pyproject.toml  setup.py  speed_test.py  temp.py
.github/workflows/: build.yml  cbuild.yml  cibuild-pypi.yml  publish-conda.yml
conda/: meta.yaml
speed_test/: plot_speed_test_results.py  sc_time_array.npy  sc_time_array_with_err.npy  sn_time_array.npy  sn_time_array_with_err.npy  sp_time_array.npy  sp_time_array_with_err.npy  speed_test.py
src/spectresc/: __init__.py  spectres.c  spectresc.py
test/: test_resampling_Feige110.py  test_with_numpy_arange.py
