[build-system]
requires = ["setuptools>=42", "wheel", "cffi>=1.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "spectresc"
version = "1.1.0.dev0"
description = "SpectRes in C"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
authors = [{name = "Marco C Lam", email = "mlam@roe.ac.uk"}]
maintainers = [{name = "Marco C Lam", email = "mlam@roe.ac.uk"}]
dependencies = [
    "numpy",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.urls]
Download = "https://github.com/cylammarco/SpectResC"

[toolset.cffi]
extra_compile_args = ["-std=c99"]
extra_link_args = []

[toolset.build]
# Set compiler flags
cflags = []
ldflags = []

[toolset.macos]
# Set MacOS specific options
cflags = ['-O3', '-fPIC', '-shared']
ldflags = []

[toolset.linux]
# Set Linux specific options
cflags = ['-O3', '-fPIC', '-shared']
ldflags = []

[toolset.windows]
# Set Windows specific options
cflags = []
ldflags = []

[tool.coverage.run]
relative_files = true

[tool.setuptools]
packages = ["spectresc"]
